[project]
authors = [{name = "Thomas Louf", email = "tlouf@pm.me"}]
dependencies = []
name = "ai4trust-observatory"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ai4trust_observatory = { path = ".", editable = true }

[tool.pixi.tasks]
